[package]
name = "sbpapp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "macros"] }
argon2 = { version = "0.5", features = ["std"] }

anyhow = "1.0"
ipnet = "2.11"
rand = "0.8"          # ⬅️ untuk OsRng

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
